# MouseLLMNotepad

./: .gitignore  AGENTS.md  README.md  RUN_ON_ANY_DEVICE.md  pyproject.toml
extension/: content.css  content.js  manifest.json  options.css  options.html  options.js  save-sheet.css  save-sheet.html  save-sheet.js  service_worker.js  shared.js  sidepanel.css  sidepanel.html  sidepanel.js
mousekb/: __init__.py  api.py  cli.py  config.py  embeddings.py  heuristics.py  markdown_utils.py  models.py  quick_capture.py  shortcuts.py  store.py
scripts/: open_quick_capture.sh
tests/: test_api.py  test_cli.py
