[project]
name = "mousekb"
version = "0.1.0"
description = "Personal knowledge capture MVP with a local-first FastAPI backend and Chrome extension."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "fastembed>=0.8.0",
  "pydantic>=2.9.0,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
mousekb = "mousekb.cli:main"
mousekb-quick-capture = "mousekb.quick_capture:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
